--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
 <body>
     <h1>Git learning started.</h1>
+    <img src="./album.jpg" alt="" srcset="">
+    <img src="./MicroservicePatternLanguage.jpg" alt="" srcset="">
 </body>
 
 </html>
