--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <h1>Git learning started !</h1>
-    <img src="./album.jpg" alt="" height="200px">
+    <img src="./album.jpg" alt="" height="200px" width="200px">
     <img src="./MicroservicePatternLanguage.jpg" alt="" srcset="">
 </body>
 
